# riscv-core

./: .gitignore  Cargo.toml  README.md  flake.nix  index.html
.github/workflows/: ci.yaml
examples/: run_tests.rs
riscv/: Cargo.toml
riscv/examples/: run_tests.rs
riscv/src/: instructions.rs  lib.rs  utils.rs
src/: app.rs  formats.rs  instructions.rs  lib.rs  main.rs  utils.rs
web/: Cargo.toml
web/src/: app.rs  main.rs
