[package]
name = "riscv-core"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr", "nightly"] }
leptos_meta = { version = "0.6", features = ["csr", "nightly"] }
log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[dev-dependencies]
glob = "0.3"
xmas-elf = "0.9"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
